# ai-agents-practice

./: vehicle_info_agent_openai.py
configuration-management-chatbot/: README.md  playbook.yaml  pyproject.toml
configuration-management-chatbot/src/configuration_management_chatbot/: crew.py  main.py
configuration-management-chatbot/src/configuration_management_chatbot/config/: agents.yaml  tasks.yaml
configuration-management-chatbot/src/configuration_management_chatbot/tools/: custom_tool.py
crewai-ansible-devops/: README.md  playbook.yaml  pyproject.toml
crewai-ansible-devops/src/ansible_devops_crew/: crew.py  main.py
crewai-ansible-devops/src/ansible_devops_crew/config/: agents.yaml  tasks.yaml
crewai-war-analyst/: README.md  pyproject.toml  report.md
crewai-war-analyst/src/first_crew150326/: crew.py  main.py
crewai-war-analyst/src/first_crew150326/config/: agents.yaml
langchain_rag_pipeline/: .env  main.py
langchain_rag_pipeline/src/: document_loader.py  embedding.py  rag_agent.py  rag_retrieval.py  vector_store.py
langchain_with_context/: .env  agent_with_context.py  simple.py
