[project]
name = "first_crew150326"
version = "0.1.0"
description = "first-crew150326 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
first_crew150326 = "first_crew150326.main:run"
run_crew = "first_crew150326.main:run"
train = "first_crew150326.main:train"
replay = "first_crew150326.main:replay"
test = "first_crew150326.main:test"
run_with_trigger = "first_crew150326.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
